Json Interface and PartPlus Algorithm