@@ -2,13 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-      <groupId>.</groupId>
+      <groupId>edu.northeastern</groupId>
   <artifactId>any-k</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
   <name>any-k</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <slf4j.version>2.0.5</slf4j.version>
+    <log4j.version>1.2.17</log4j.version>
   </properties>
   <build>
     <plugins>
@@ -17,8 +19,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.9.0</version>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
       <plugin>
@@ -103,10 +105,20 @@
       <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
+          <configuration>
+            <argLine>
+                --illegal-access=permit
+            </argLine>
+          </configuration>
       </plugin>
       <plugin>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M5</version>
+          <configuration>
+            <argLine>
+                --illegal-access=permit
+            </argLine>
+          </configuration>
       </plugin>
     </plugins> 
     <resources>
@@ -131,17 +143,25 @@
         <artifactId>commons-cli</artifactId>
         <version>1.5.0</version>
         </dependency>
-    <!--
     <dependency>
         <groupId>org.jheaps</groupId>
         <artifactId>jheaps</artifactId>
-        <version>0.11</version>
+        <version>0.14</version>
     </dependency>
-    -->
     <dependency>
         <groupId>org.javatuples</groupId>
         <artifactId>javatuples</artifactId>
         <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.6</version>
     </dependency>
   </dependencies>
 </project>
